<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <FrameLayout
        android:id="@+id/dasboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/homeNavigation"></FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/homeNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/button" />
</RelativeLayout>