...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="20dp"
                            android:drawableLeft="@drawable/user"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"

                            android:layout_marginEnd="20dp"
...
                            style="@style/radioButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Female" />

                        <RadioButton
                            android:id="@+id/rbMale"
                            style="@style/radioButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Male" />

                        <RadioButton
...
                        style="@style/textStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="What's your birthday?" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="-10dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="20dp"
                            android:drawableLeft="@drawable/mail"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"

                            android:layout_marginEnd="20dp"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="20dp"
                            android:drawableLeft="@drawable/user"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"

                            android:layout_marginEnd="20dp"
...
                        android:text="By Tapping Sign Up, you agree to Terms, Data Policy and Cookies Policy. You may recive SMS notifications from us and can opt out any time. Information from your address book will be continuously uploaded to Facebook so we can suggest friends and provide and improve ads for you and others, and offer a better service."
                        android:textAlignment="center"

                        />

                    <Button
                        android:id="@+id/btnsignup"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"


...
                    android:layout_width="match_parent"
                    android:layout_height="345dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/noimage" />

...
