<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative1">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"

            android:src="@drawable/background"
            app:srcCompat="@drawable/background" />
        <Button
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/ic_arrow_back_black_24dp"/>

=
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_profileimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:elevation="5dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="7dp"

            android:foregroundGravity="right"
            android:src="@drawable/me" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/header_cover_image"
            android:background="@drawable/background"
            android:elevation="4dp"
            android:paddingBottom="24dp">



            <TextView
                android:id="@+id/fname1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Tara Chaudhary"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fname1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="tara07"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"


            android:layout_marginTop="5dp"

            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"

            >

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="First Name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />
</com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/firstname"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@id/last"
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="10dp"
                    android:hint="Email"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/email1"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:hint="Phone"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/phone1"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="Username"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/signup"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"

                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="Update"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>